# studious-invention

./: .gitignore  README.md  docker-compose.yml  sample-aws-workflow.json
apps/api/: logging_config.py  main.py  pyproject.toml
apps/api/models/: instance.py  workflow.py
apps/api/routers/: instances.py  workflows.py
apps/api/services/: operate.py  tasklist.py  zeebe.py
apps/ui/: eslint.config.js  package-lock.json  package.json
apps/ui/src/: App.tsx  router.tsx
apps/ui/src/api/: instances.ts  workflows.ts
apps/ui/src/hooks/: usePolling.ts
apps/ui/src/pages/: CatalogPage.tsx
apps/worker/: config.py  main.py  pyproject.toml
apps/worker/handlers/: provisioning.py
docs/: architecture.md  local-development.md
docs/adr/: 001-project-vision-and-goals.md  002-monorepo-vs-polyrepo.md  003-workflow-orchestration-engine.md  004-camunda-setup-and-workflow-storage.md  005-frontend-architecture.md  006-api-technology.md  007-worker-communication-pattern-and-workflow-design.md  008-ui-technology.md  009-dual-surface-frontend.md
docs/steps/: check-gitguardian-threshold.md  check-snyk-threshold.md  check-sonarcloud-threshold.md  configure-gitguardian.md  configure-grafana-cloud.md  configure-sentry.md  configure-snyk.md  configure-sonarcloud.md  deploy-to-production.md  deploy-to-staging.md  develop-project.md  finalize-grafana-cloud.md  post-deploy-health-check.md  provision-infrastructure.md  request-architecture-review.md  request-security-review.md  request-security-signoff.md  scaffold-project.md  scaffold-repository.md  write-e2e-tests.md  write-unit-tests.md
workflows/: aws-state-machine-human-tasks.bpmn  create-backend-api-aws.json  create-backend-api.bpmn  create-backend-service-simple-aws.json  create-backend-service-simple.bpmn
